--- a/frow/frow.css
+++ b/frow/frow.css
@@ -1,251 +1,195 @@
 /*! Frow CSS | MIT License | frowcss.com */
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-/* Document
- * ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS. */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */ }
+  -webkit-text-size-adjust: 100%; }
 
-/* Sections
- * ========================================================================== */
-/**
- * Remove the margin in all browsers. */
 body {
   margin: 0; }
 
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari. */
+main {
+  display: block; }
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0; }
 
-/* Grouping content
- * ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE. */
 hr {
   box-sizing: content-box;
-  /* 1 */
   height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */ }
+  overflow: visible; }
 
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers. */
 pre {
   font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */ }
+  font-size: 1em; }
 
-/* Text-level semantics
- * ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10. */
 a {
   background-color: transparent; }
 
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari. */
 abbr[title] {
   border-bottom: none;
-  /* 1 */
   text-decoration: underline;
-  /* 2 */
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */ }
+          text-decoration: underline dotted; }
 
-/**
- * Add the correct font weight in Chrome, Edge, and Safari. */
-b, strong {
+b {
   font-weight: bolder; }
 
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers. */
-code, kbd, samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */ }
+strong {
+  font-weight: bolder; }
 
-/**
- * Add the correct font size in all browsers. */
+code {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
+kbd {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
 small {
   font-size: 80%; }
 
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers. */
-sub, sup {
+sub {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
-
-sub {
+  vertical-align: baseline;
   bottom: -0.25em; }
 
 sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
   top: -0.5em; }
 
-/* Embedded content
- * ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10. */
 img {
   border-style: none; }
 
-/* Forms
- * ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari. */
-button, input, optgroup, select, textarea {
+button {
   font-family: inherit;
-  /* 1 */
   font-size: 100%;
-  /* 1 */
   line-height: 1.15;
-  /* 1 */
   margin: 0;
-  /* 2 */ }
+  overflow: visible;
+  text-transform: none;
+  -webkit-appearance: button; }
+  button::-moz-focus-inner {
+    border-style: none;
+    padding: 0; }
+  button:-moz-focusring {
+    outline: 1px dotted ButtonText; }
 
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge. */
-button, input {
-  /* 1 */
+input {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
   overflow: visible; }
 
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox. */
-button, select {
-  /* 1 */
+optgroup {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0; }
+
+select {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
   text-transform: none; }
 
-/**
- * Correct the inability to style clickable types in iOS and Safari. */
-button, [type="button"], [type="reset"], [type="submit"] {
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+  overflow: auto; }
+
+[type="button"] {
   -webkit-appearance: button; }
+  [type="button"]::-moz-focus-inner {
+    border-style: none;
+    padding: 0; }
+  [type="button"]:-moz-focusring {
+    outline: 1px dotted ButtonText; }
 
-/**
- * Remove the inner border and padding in Firefox. */
-button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0; }
+[type="reset"] {
+  -webkit-appearance: button; }
+  [type="reset"]::-moz-focus-inner {
+    border-style: none;
+    padding: 0; }
+  [type="reset"]:-moz-focusring {
+    outline: 1px dotted ButtonText; }
 
-/**
- * Restore the focus styles unset by the previous rule. */
-button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText; }
+[type="submit"] {
+  -webkit-appearance: button; }
+  [type="submit"]::-moz-focus-inner {
+    border-style: none;
+    padding: 0; }
+  [type="submit"]:-moz-focusring {
+    outline: 1px dotted ButtonText; }
 
-/**
- * Correct the padding in Firefox. */
 fieldset {
   padding: 0.35em 0.75em 0.625em; }
 
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers. */
 legend {
   box-sizing: border-box;
-  /* 1 */
   color: inherit;
-  /* 2 */
   display: table;
-  /* 1 */
   max-width: 100%;
-  /* 1 */
   padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */ }
+  white-space: normal; }
 
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera. */
 progress {
   vertical-align: baseline; }
 
-/**
- * Remove the default vertical scrollbar in IE 10+. */
-textarea {
-  overflow: auto; }
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10. */
-[type="checkbox"], [type="radio"] {
+[type="checkbox"] {
   box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */ }
+  padding: 0; }
 
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome. */
-[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0; }
+
+[type="number"]::-webkit-inner-spin-button {
   height: auto; }
 
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari. */
+[type="number"]::-webkit-outer-spin-button {
+  height: auto; }
+
 [type="search"] {
   -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */ }
+  outline-offset: -2px; }
   [type="search"]::-webkit-search-decoration {
     -webkit-appearance: none; }
+  [type="search"]::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    font: inherit; }
 
-/**
- * Remove the inner padding in Chrome and Safari on macOS. */
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari. */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */ }
-
-/* Interactive
- * ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox. */
 details {
   display: block; }
 
-/*
- * Add the correct display in all browsers. */
 summary {
   display: list-item; }
 
-/* Misc
- * ========================================================================== */
-/**
- * Add the correct display in IE 10+. */
-template, [hidden] {
+template {
   display: none; }
 
-/**
- * Add the correct display in IE 10. */
+[hidden] {
+  display: none; }
+
 *, :after, :before {
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+
+[hidden] {
+  display: none !important; }
 
 body {
   color: #333; }
@@ -262,7 +206,8 @@ a {
     color: #0d0d0d;
     text-decoration: underline; }
   p a {
-    text-decoration: underline; }
+    text-decoration: underline;
+    display: inline; }
 
 svg {
   display: block; }
@@ -343,6 +288,97 @@ button,
       color: #888888;
       -webkit-transform: scale(1);
               transform: scale(1); }
+  button.button-link, button.button-link:disabled,
+  [type="button"].button-link,
+  [type="button"].button-link:disabled,
+  [type="reset"].button-link,
+  [type="reset"].button-link:disabled,
+  [type="submit"].button-link,
+  [type="submit"].button-link:disabled {
+    cursor: pointer;
+    color: #333;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    padding: 0;
+    background: none;
+    color: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    text-transform: none; }
+    button.button-link:hover, button.button-link:focus, button.button-link:active, button.button-link:disabled:hover, button.button-link:disabled:focus, button.button-link:disabled:active,
+    [type="button"].button-link:hover,
+    [type="button"].button-link:focus,
+    [type="button"].button-link:active,
+    [type="button"].button-link:disabled:hover,
+    [type="button"].button-link:disabled:focus,
+    [type="button"].button-link:disabled:active,
+    [type="reset"].button-link:hover,
+    [type="reset"].button-link:focus,
+    [type="reset"].button-link:active,
+    [type="reset"].button-link:disabled:hover,
+    [type="reset"].button-link:disabled:focus,
+    [type="reset"].button-link:disabled:active,
+    [type="submit"].button-link:hover,
+    [type="submit"].button-link:focus,
+    [type="submit"].button-link:active,
+    [type="submit"].button-link:disabled:hover,
+    [type="submit"].button-link:disabled:focus,
+    [type="submit"].button-link:disabled:active {
+      color: #0d0d0d;
+      text-decoration: underline; }
+    p button.button-link, p button.button-link:disabled, p
+    [type="button"].button-link, p
+    [type="button"].button-link:disabled, p
+    [type="reset"].button-link, p
+    [type="reset"].button-link:disabled, p
+    [type="submit"].button-link, p
+    [type="submit"].button-link:disabled {
+      text-decoration: underline;
+      display: inline; }
+  button.button-link:disabled, button.button-link:disabled:hover, button.button-link:disabled:focus, button.button-link:disabled:active,
+  [type="button"].button-link:disabled,
+  [type="button"].button-link:disabled:hover,
+  [type="button"].button-link:disabled:focus,
+  [type="button"].button-link:disabled:active,
+  [type="reset"].button-link:disabled,
+  [type="reset"].button-link:disabled:hover,
+  [type="reset"].button-link:disabled:focus,
+  [type="reset"].button-link:disabled:active,
+  [type="submit"].button-link:disabled,
+  [type="submit"].button-link:disabled:hover,
+  [type="submit"].button-link:disabled:focus,
+  [type="submit"].button-link:disabled:active {
+    color: #999999;
+    text-decoration: none; }
+  button.button-none, button.button-none:focus, button.button-none:active, button.button-none:hover, button.button-none:disabled, button.button-none:disabled:hover,
+  [type="button"].button-none,
+  [type="button"].button-none:focus,
+  [type="button"].button-none:active,
+  [type="button"].button-none:hover,
+  [type="button"].button-none:disabled,
+  [type="button"].button-none:disabled:hover,
+  [type="reset"].button-none,
+  [type="reset"].button-none:focus,
+  [type="reset"].button-none:active,
+  [type="reset"].button-none:hover,
+  [type="reset"].button-none:disabled,
+  [type="reset"].button-none:disabled:hover,
+  [type="submit"].button-none,
+  [type="submit"].button-none:focus,
+  [type="submit"].button-none:active,
+  [type="submit"].button-none:hover,
+  [type="submit"].button-none:disabled,
+  [type="submit"].button-none:disabled:hover {
+    border: none;
+    outline: none;
+    margin: 0;
+    padding: 0;
+    background: none;
+    color: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    text-transform: none; }
 
 fieldset {
   border: none;
@@ -357,12 +393,15 @@ legend {
   margin-bottom: 10px;
   display: block; }
 
-label {
+label,
+.label {
   color: #9E9E9E;
   font-size: 14px;
   margin-bottom: 20px;
+  width: 100%; }
+
+label {
   cursor: pointer;
-  width: 100%;
   display: flex;
   flex-direction: column; }
   label.centered {
@@ -470,11 +509,27 @@ input {
   padding: 8px 5px 4px;
   width: 100%;
   transition: border-color 0.4s, color 0.4s; }
+  input::-webkit-input-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  input::-moz-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  input:-ms-input-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  input::-ms-input-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  input::placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
   input:placeholder-shown {
     color: #9E9E9E; }
   input::-webkit-input-placeholder {
     color: #9E9E9E; }
   input::-moz-placeholder {
+    opacity: 1;
     color: #9E9E9E; }
   input:-ms-input-placeholder {
     color: #9E9E9E; }
@@ -562,7 +617,8 @@ input {
     border: none;
     padding: 13px 0px;
     -webkit-appearance: none;
-    width: 100%; }
+    width: 100%;
+    cursor: pointer; }
     input[type="range"]:disabled {
       margin-bottom: 0; }
     input[type="range"]::-webkit-slider-thumb {
@@ -818,11 +874,27 @@ textarea {
   transition: border-color 0.4s, color 0.4s;
   min-height: 50px;
   resize: vertical; }
+  textarea::-webkit-input-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  textarea::-moz-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  textarea:-ms-input-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  textarea::-ms-input-placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
+  textarea::placeholder {
+    opacity: 1;
+    color: #9E9E9E; }
   textarea:placeholder-shown {
     color: #9E9E9E; }
   textarea::-webkit-input-placeholder {
     color: #9E9E9E; }
   textarea::-moz-placeholder {
+    opacity: 1;
     color: #9E9E9E; }
   textarea:-ms-input-placeholder {
     color: #9E9E9E; }
@@ -2353,6 +2425,18 @@ textarea {
 .height-auto {
   height: auto !important; }
 
+.shrink-0 {
+  flex-shrink: 0 !important; }
+
+.shrink-1 {
+  flex-shrink: 1 !important; }
+
+.grow-0 {
+  flex-grow: 0 !important; }
+
+.grow-1 {
+  flex-grow: 1 !important; }
+
 .clickable:not([disabled]), [onclick]:not([disabled]) {
   cursor: pointer !important; }
 
@@ -2388,3 +2472,16 @@ textarea {
 
 .text-capitalize {
   text-transform: capitalize !important; }
+
+.visible-print,
+.frow.visible-print {
+  display: none !important; }
+
+@media print {
+  .hidden-print,
+  .frow.hidden-print {
+    display: none !important; }
+  .visible-print {
+    display: block !important; }
+  .frow.visible-print {
+    display: flex !important; } }
