--- a/frow/frow.css
+++ b/frow/frow.css
@@ -236,9 +236,7 @@ button,
   text-align: center;
   outline: none;
   padding: 7px;
-  transition: background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s, -webkit-transform 0.1s;
-  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s;
-  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s, -webkit-transform 0.1s; }
+  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s; }
   button:hover, button:focus, button:active,
   [type="button"]:hover,
   [type="button"]:focus,
@@ -258,8 +256,7 @@ button,
   [type="button"]:active,
   [type="reset"]:active,
   [type="submit"]:active {
-    -webkit-transform: scale(0.96);
-            transform: scale(0.96); }
+    transform: scale(0.96); }
   button:disabled,
   [type="button"]:disabled,
   [type="reset"]:disabled,
@@ -269,8 +266,7 @@ button,
     background: repeating-linear-gradient(45deg, #dddddd, #dddddd 3px, #FFF 3px, #FFF 6px);
     background-color: #c4c4c4;
     color: #888888;
-    -webkit-transform: scale(1);
-            transform: scale(1); }
+    transform: scale(1); }
     button:disabled:hover, button:disabled:focus, button:disabled:active,
     [type="button"]:disabled:hover,
     [type="button"]:disabled:focus,
@@ -286,8 +282,7 @@ button,
       background: repeating-linear-gradient(45deg, #dddddd, #dddddd 3px, #FFF 3px, #FFF 6px);
       background-color: #c4c4c4;
       color: #888888;
-      -webkit-transform: scale(1);
-              transform: scale(1); }
+      transform: scale(1); }
   button.button-link, button.button-link:disabled,
   [type="button"].button-link,
   [type="button"].button-link:disabled,
@@ -506,7 +501,6 @@ input {
   color: #333;
   display: block;
   font-size: 15px;
-  padding: 8px 5px 4px;
   width: 100%;
   transition: border-color 0.4s, color 0.4s; }
   input::-webkit-input-placeholder {
@@ -565,12 +559,9 @@ input {
     margin: 0 5px 0 0;
     cursor: pointer;
     border: 2px solid #4F4F51;
-    transition: background 0.4s, border-color 0.4s, box-shadow 0.4s, -webkit-transform 0.4s;
-    transition: transform 0.4s, background 0.4s, border-color 0.4s, box-shadow 0.4s;
-    transition: transform 0.4s, background 0.4s, border-color 0.4s, box-shadow 0.4s, -webkit-transform 0.4s; }
+    transition: transform 0.4s, background 0.4s, border-color 0.4s, box-shadow 0.4s; }
     input[type="checkbox"]:hover, input[type="checkbox"]:focus {
-      -webkit-transform: scale(1.15);
-              transform: scale(1.15); }
+      transform: scale(1.15); }
     input[type="checkbox"]:disabled {
       cursor: default !important;
       box-shadow: none;
@@ -596,12 +587,9 @@ input {
     margin: 0 5px 0 0;
     cursor: pointer;
     border: 2px solid #4F4F51;
-    transition: background 0.4s, border-color 0.4s, box-shadow 0.4s, -webkit-transform 0.4s;
-    transition: transform 0.4s, background 0.4s, border-color 0.4s, box-shadow 0.4s;
-    transition: transform 0.4s, background 0.4s, border-color 0.4s, box-shadow 0.4s, -webkit-transform 0.4s; }
+    transition: transform 0.4s, background 0.4s, border-color 0.4s, box-shadow 0.4s; }
     input[type="radio"]:hover, input[type="radio"]:focus {
-      -webkit-transform: scale(1.15);
-              transform: scale(1.15); }
+      transform: scale(1.15); }
     input[type="radio"]:disabled {
       cursor: default !important;
       box-shadow: none;
@@ -615,7 +603,7 @@ input {
         background-color: #EAEAEA; }
   input[type="range"] {
     border: none;
-    padding: 13px 0px;
+    padding: 13px 0;
     -webkit-appearance: none;
     width: 100%;
     cursor: pointer; }
@@ -640,9 +628,7 @@ input {
       width: 18px;
       border-radius: 50%;
       border: 0;
-      transition: -webkit-transform 0.4s;
-      transition: transform 0.4s;
-      transition: transform 0.4s, -webkit-transform 0.4s; }
+      transition: transform 0.4s; }
     input[type="range"]::-moz-range-thumb {
       cursor: pointer;
       background: #4F4F51;
@@ -650,9 +636,7 @@ input {
       width: 18px;
       border-radius: 50%;
       border: 0;
-      transition: -webkit-transform 0.4s;
-      transition: transform 0.4s;
-      transition: transform 0.4s, -webkit-transform 0.4s; }
+      transition: transform 0.4s; }
     input[type="range"]::-ms-thumb {
       cursor: pointer;
       background: #4F4F51;
@@ -660,14 +644,11 @@ input {
       width: 18px;
       border-radius: 50%;
       border: 0;
-      transition: -webkit-transform 0.4s;
       transition: transform 0.4s;
-      transition: transform 0.4s, -webkit-transform 0.4s;
       margin-top: -1px; }
     input[type="range"]:active::-webkit-slider-thumb, input[type="range"]:hover::-webkit-slider-thumb, input[type="range"]:focus::-webkit-slider-thumb {
       outline: none;
-      -webkit-transform: scale(1.15);
-              transform: scale(1.15); }
+      transform: scale(1.15); }
     input[type="range"]:active::-moz-range-thumb, input[type="range"]:hover::-moz-range-thumb, input[type="range"]:focus::-moz-range-thumb {
       outline: none;
       transform: scale(1.15); }
@@ -743,9 +724,7 @@ input::-webkit-file-upload-button {
   text-align: center;
   outline: none;
   padding: 7px;
-  transition: background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s, -webkit-transform 0.1s;
-  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s;
-  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s, -webkit-transform 0.1s; }
+  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s; }
   input::-webkit-file-upload-button:hover, input::-webkit-file-upload-button:focus, input::-webkit-file-upload-button:active {
     background-color: #29292a;
     border-color: #29292a;
@@ -753,24 +732,21 @@ input::-webkit-file-upload-button {
     color: #FFF;
     text-decoration: none; }
   input::-webkit-file-upload-button:active {
-    -webkit-transform: scale(0.96);
-            transform: scale(0.96); }
+    transform: scale(0.96); }
   input::-webkit-file-upload-button:disabled {
     cursor: default !important;
     border: 2px solid #EAEAEA;
     background: repeating-linear-gradient(45deg, #dddddd, #dddddd 3px, #FFF 3px, #FFF 6px);
     background-color: #c4c4c4;
     color: #888888;
-    -webkit-transform: scale(1);
-            transform: scale(1); }
+    transform: scale(1); }
     input::-webkit-file-upload-button:disabled:hover, input::-webkit-file-upload-button:disabled:focus, input::-webkit-file-upload-button:disabled:active {
       cursor: default !important;
       border: 2px solid #EAEAEA;
       background: repeating-linear-gradient(45deg, #dddddd, #dddddd 3px, #FFF 3px, #FFF 6px);
       background-color: #c4c4c4;
       color: #888888;
-      -webkit-transform: scale(1);
-              transform: scale(1); }
+      transform: scale(1); }
 
 input:disabled::-webkit-file-upload-button {
   cursor: default !important;
@@ -778,8 +754,7 @@ input:disabled::-webkit-file-upload-button {
   background: repeating-linear-gradient(45deg, #dddddd, #dddddd 3px, #FFF 3px, #FFF 6px);
   background-color: #c4c4c4;
   color: #888888;
-  -webkit-transform: scale(1);
-          transform: scale(1); }
+  transform: scale(1); }
 
 input::-ms-browse {
   -webkit-appearance: none;
@@ -796,9 +771,7 @@ input::-ms-browse {
   text-align: center;
   outline: none;
   padding: 7px;
-  transition: background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s, -webkit-transform 0.1s;
-  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s;
-  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s, -webkit-transform 0.1s; }
+  transition: transform 0.1s, background 0.4s, border-color 0.4s, color 0.4s, box-shadow 0.4s; }
   input::-ms-browse:hover, input::-ms-browse:focus, input::-ms-browse:active {
     background-color: #29292a;
     border-color: #29292a;
@@ -869,7 +842,6 @@ textarea {
   color: #333;
   display: block;
   font-size: 15px;
-  padding: 8px 5px 4px;
   width: 100%;
   transition: border-color 0.4s, color 0.4s;
   min-height: 50px;
@@ -1707,43 +1679,43 @@ textarea {
     display: none !important; } }
 
 @media (max-width: 767px) {
-  .direction-row-xs {
+  .frow.direction-row-xs {
     flex-direction: row; }
-  .direction-reverse-xs {
+  .frow.direction-reverse-xs {
     flex-direction: row-reverse; }
-  .direction-column-xs {
+  .frow.direction-column-xs {
     flex-direction: column; }
-  .direction-column-reverse-xs {
+  .frow.direction-column-reverse-xs {
     flex-direction: column-reverse; } }
 
 @media (min-width: 768px) and (max-width: 991px) {
-  .direction-row-sm {
+  .frow.direction-row-sm {
     flex-direction: row; }
-  .direction-reverse-sm {
+  .frow.direction-reverse-sm {
     flex-direction: row-reverse; }
-  .direction-column-sm {
+  .frow.direction-column-sm {
     flex-direction: column; }
-  .direction-column-reverse-sm {
+  .frow.direction-column-reverse-sm {
     flex-direction: column-reverse; } }
 
 @media (min-width: 992px) and (max-width: 1199px) {
-  .direction-row-md {
+  .frow.direction-row-md {
     flex-direction: row; }
-  .direction-reverse-md {
+  .frow.direction-reverse-md {
     flex-direction: row-reverse; }
-  .direction-column-md {
+  .frow.direction-column-md {
     flex-direction: column; }
-  .direction-column-reverse-md {
+  .frow.direction-column-reverse-md {
     flex-direction: column-reverse; } }
 
 @media (min-width: 1200px) {
-  .direction-row-lg {
+  .frow.direction-row-lg {
     flex-direction: row; }
-  .direction-reverse-lg {
+  .frow.direction-reverse-lg {
     flex-direction: row-reverse; }
-  .direction-column-lg {
+  .frow.direction-column-lg {
     flex-direction: column; }
-  .direction-column-reverse-lg {
+  .frow.direction-column-reverse-lg {
     flex-direction: column-reverse; } }
 
 .m-0 {
@@ -2424,6 +2396,33 @@ textarea {
 
 .height-auto {
   height: auto !important; }
+
+.overflow-visible {
+  overflow: visible !important; }
+
+.overflow-hidden {
+  overflow: hidden !important; }
+
+.overflow-auto {
+  overflow: auto !important; }
+
+.overflow-y-visible {
+  overflow-y: visible !important; }
+
+.overflow-y-hidden {
+  overflow-y: hidden !important; }
+
+.overflow-y-auto {
+  overflow-y: auto !important; }
+
+.overflow-x-visible {
+  overflow-x: visible !important; }
+
+.overflow-x-hidden {
+  overflow-x: hidden !important; }
+
+.overflow-x-auto {
+  overflow-x: auto !important; }
 
 .shrink-0 {
   flex-shrink: 0 !important; }
