--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   text-align: center;
   overflow: hidden;
   width: 100%;
@@ -113,7 +114,7 @@ video {
   width: 15px;
   height: 30px;
   background: #4f4f51;
-  transition: clip-path .3s ease;
+  transition: clip-path 0.3s ease;
 }
 
 .play-button-before {
@@ -128,7 +129,7 @@ video {
   clip-path: polygon(0 0, 70% 0, 70% 100%, 0% 100%);
 }
 
-#play-button-container.playing .play-button-after{
+#play-button-container.playing .play-button-after {
   clip-path: polygon(30% 0, 100% 0, 100% 100%, 30% 100%);
 }
 
@@ -173,7 +174,8 @@ video {
   box-shadow: 0px 0px 1px 7px #b9b9b9;
 }
 
-#chat-container, #chat-container * {
+#chat-container,
+#chat-container * {
   padding: 0;
 }
 
