optimize streamer.html

--- a/extension-pages/dropdown-styles.css
+++ b/extension-pages/dropdown-styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: #f6f6f6;
   min-width: 400px;
-  margin: 20px;
+  padding: 20px;
   font-family: Quicksand;
   font-weight: 500;
   font-size: 14px;
