--- a/global.css
+++ b/global.css
@@ -2,6 +2,10 @@ html,
 body {
   font-family: Quicksand;
   font-weight: 500;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  color: #4f4f51;
 }
 
 /* Animations */
