--- a/streamer/streamer.css
+++ b/streamer/streamer.css
@@ -139,7 +139,7 @@ body {
   display: block;
   font-size: 40px;
   color: #4f4f51;
-  margin: 0 auto 50px;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -148,6 +148,13 @@ body {
   #public-link {
     font-size: 30px;
   }
+}
+
+.viewer-count {
+  margin: 5px auto 60px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 #stop-sharing {
