--- a/global.css
+++ b/global.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: Quicksand;
+  font-family: Quicksand, sans-serif;
   font-weight: 500;
   overflow: hidden;
   width: 100%;
