--- a/src/assets/sass/_colors.sass
+++ b/src/assets/sass/_colors.sass
@@ -1,6 +1,6 @@
 // Frow Variables imported, but can be overruled here ($gray-dark, $off-black, etc.)
 // https://frowcss.com/customize.html#colors
 
-$primary-color: $gray-dark
-$secondary-color: $gray-light
+$primary-color: #4f4f51
+$secondary-color: #bebebe
 $tertiary-color: $gray-darker
