--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -5,138 +5,7 @@ body
   overflow: hidden
   width: 100%
   height: 100%
-  color: #4f4f51
+  color: $primary-color
 
-/* Animations
-@keyframes pop-in
-  0%
-    transform: scale(0)
-  80%
-    transform: scale(1.1)
-  100%
-    transform: scale(1)
-
-
-.animate-pop-in
-  animation: pop-in 0.3s
-
-@keyframes fade-in
-  from
-    opacity: 0
-  to
-    opacity: 1
-
-
-.animate-fade-in
-  animation: fade-in 0.3s
-
-@keyframes slide-down
-  from
-    transform: translateY(-100%)
-  to
-    transform: translateY(0)
-
-
-.animate-slide-down
-  animation: slide-down 0.3s
-
-@keyframes slide-up
-  from
-    transform: translateY(100%)
-  to
-    transform: translateY(0)
-
-
-.animate-slide-up
-  animation: slide-up 0.3s
-
-@keyframes pulse
-  from
-    opacity: 1
-  to
-    opacity: 0.4
-
-
-.animate-pulse
-  animation: pulse 1.2 ease-in-out infinite alternate
-
-.github-corner:hover .octo-arm
-  animation: octocat-wave 560ms ease-in-out
-
-@keyframes octocat-wave
-  0%,
-  100%
-    transform: rotate(0)
-  20%,
-  60%
-    transform: rotate(-25deg)
-  40%,
-  80%
-    transform: rotate(10deg)
-
-
-@media (max-width: 500px)
-  .github-corner:hover .octo-arm
-    animation: none
-  .github-corner .octo-arm
-    animation: octocat-wave 560ms ease-in-out
-  
-// body
-//   height: 100%
-//   background-color: var(--theme-color)
-//   color: var(--inverse-color)
-//   transition: color $theme-fade-speed, background-color $theme-fade-speed
-
-//   &.colored-page
-//     background-color: $primary-color
-
-// a
-//   color: var(--inverse-color)
-//   transition: color $theme-fade-speed
-
-//   &:hover, &:active, &:focus
-//     color: var(--inverse-off-color)
-
-// .text-bold
-//   font-weight: $bold !important
-
-// p
-//   margin: 0
-//   line-height: 1.5em
-//   color: var(--inverse-off-color)
-
-// p, h1, h2, h3, h4, h5, h6
-//   color: var(--inverse-off-color)
-// // Delete/replace when Frow version 3.2 or higher
-// .rotate--90
-//   transform: rotate(-90deg) !important
-
-// .opacity-100
-//   opacity: 1
-//   transition: opacity $animate-speed !important
-
-// .opacity-0
-//   opacity: 0
-//   transition: opacity $animate-speed !important
-
-// .text-ellipsis
-//   white-space: nowrap
-//   overflow: hidden
-//   text-overflow: ellipsis
-
-// .button-none[type='button']
-//   text-align: left
-
-// .frow,
-// label
-//   min-width: 0
-
-// .link-none
-//   &,
-//   &:hover,
-//   &:active,
-//   &:focus
-//     text-decoration: none
-
-// .text-underline
-//   text-decoration: underline
+input
+  font-weight: 500
