--- a/src/assets/sass/_colors.sass
+++ b/src/assets/sass/_colors.sass
@@ -1,6 +1,8 @@
 // Frow Variables imported, but can be overruled here ($gray-dark, $off-black, etc.)
 // https://frowcss.com/customize.html#colors
 
-$primary-color: #4f4f51
+$primary-color: $gray-darker
 $secondary-color: #bebebe
-$tertiary-color: $gray-darker
+$tertiary-color: $gray-lighter
+
+$text-color: $primary-color
