remove unneeded backslash before :root

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -17,7 +17,7 @@ $z-modal: 8
 $z-sidebar-background: 9
 $z-sidebar: 10
 
-\:root
+:root
   --theme-color: #{$white}
   --theme-off-color: #{$background-color}
   --inverse-color: #{$off-black}
