attempting to add animation on hover to reduce chat room size WIP

--- a/src/assets/sass/_animations.sass
+++ b/src/assets/sass/_animations.sass
@@ -45,3 +45,9 @@
 
 .animate-pulse
   animation: pulse ($animate-speed * 4) ease-in-out infinite alternate
+
+@keyframes shrink-50-hover
+  from
+    max-height: 250px
+  to
+    max-height: 500px
