change $bold to $weight-bold

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -4,7 +4,7 @@ $border-radius-small: 7px
 $theme-fade-speed: 0.8s
 
 // font-weights
-$bold: 700
+$weight-bold: 700
 
 // z-index
 $z-page: 2 // For any elements on random pages
