--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -1,16 +1,20 @@
 html,
 body
-  font-family: Quicksand, sans-serif
-  font-weight: 500
+  font-family: $font-family
+  font-weight: $weight-regular
   overflow: hidden
   width: 100%
   height: 100%
 
 input
-  font-weight: 500
+  font-weight: $weight-regular
+
+h1, h2, h3, h4, h5, h6
+  font-weight: $weight-bold
 
 .text-bold
   font-weight: $weight-bold
 
-label, .label
+label,
+.label
   color: $text-color
