--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -1,4 +1,4 @@
-$font-family: 'Hind', sans-serif
+$font-family: 'Cabin', sans-serif
 $border-radius-large: 12px
 $border-radius-small: 7px
 $theme-fade-speed: 0.8s
