fix import file name

--- a/src/assets/sass/global-setup.sass
+++ b/src/assets/sass/global-setup.sass
@@ -1,4 +1,4 @@
-@import ~frow/variables
+@import ~frow/_variables
 @import @/assets/sass/_colors.sass
 @import @/assets/sass/_variables.sass
 @import @/assets/sass/_mixins.sass
