explicitly set background color

--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -2,6 +2,7 @@ html,
 body
   font-family: $font-family
   font-weight: $weight-regular
+  background-color: $white
 
 input
   font-weight: $weight-regular
