updated root styles for both themes

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -23,9 +23,11 @@ $z-sidebar: 10
   --theme-off-color: #{$background-color}
   --inverse-color: #{$off-black}
   --inverse-off-color: #222
+  --placeholder-color: #bbb
 
 [data-theme="dark"]
   --theme-color: #{$off-black}
   --theme-off-color: #222
   --inverse-color:  #{$white}
   --inverse-off-color: #{$background-color}
+  --placeholder-color: #aaa
