changed inverse color for root to primary color

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -21,7 +21,7 @@ $z-sidebar: 10
 :root
   --theme-color: #{$white}
   --theme-off-color: #{$background-color}
-  --inverse-color: #{$off-black}
+  --inverse-color: #{$primary-color}
   --inverse-off-color: #222
   --placeholder-color: #bbb
 
