replaced primary-color with --inverse-color

--- a/src/assets/sass/_colors.sass
+++ b/src/assets/sass/_colors.sass
@@ -5,6 +5,6 @@ $primary-color: $gray-darker
 $secondary-color: #bebebe
 $tertiary-color: $gray-lighter
 
-$text-color: $primary-color
+$text-color: var(--inverse-color)
 
 $blue: #3eb5ff
