changed inverse-off-color to an off white

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -29,5 +29,5 @@ $z-sidebar: 10
   --theme-color: #{$off-black}
   --theme-off-color: #222
   --inverse-color:  #{$white}
-  --inverse-off-color: #{$background-color}
+  --inverse-off-color: #c8c8c8
   --placeholder-color: #aaa
