removed unused css rule for svg and added global select rule to style background color

--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -18,6 +18,6 @@ label,
 .label
   color: var(--inverse-color)
 
-// svg
-//   fill: var(--inverse-color)
-
+select
+  background-color: var(--theme-color)
+  transition: color $theme-fade-speed, background-color $theme-fade-speed
