over wrote frows shadow-light in dark theme rules

--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -26,3 +26,8 @@ select
 svg,
 path
   transition: fill $theme-fade-speed
+
+
+[data-theme="dark"]
+  .shadow-light
+    box-shadow: 0px 1px 3px 0px black !important
