--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -23,11 +23,11 @@ $z-sidebar: 10
   --theme-off-color: #{$background-color}
   --inverse-color: #{$primary-color}
   --inverse-off-color: #222
-  --placeholder-color: #bbb
+  --placeholder-color: #{$tertiary-color}
 
 [data-theme="dark"]
   --theme-color: #{$off-black}
   --theme-off-color: #222
   --inverse-color:  #{$white}
   --inverse-off-color: #c8c8c8
-  --placeholder-color: #aaa
+  --placeholder-color: #{$primary-color}
