--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -30,4 +30,4 @@ path
 
 [data-theme="dark"]
   .shadow-light
-    box-shadow: 0px 1px 3px 0px black !important
+    box-shadow: 0px 1px 3px 0px $black !important
