added media preference to dynamically change theme color based on os

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -25,9 +25,25 @@ $z-sidebar: 10
   --inverse-off-color: #222
   --placeholder-color: #{$tertiary-color}
 
+@media (prefers-color-scheme: light)
+  [data-theme="auto"]
+    --theme-color: #{$white}
+    --theme-off-color: #{$background-color}
+    --inverse-color: #{$primary-color}
+    --inverse-off-color: #222
+    --placeholder-color: #{$tertiary-color}
+
 [data-theme="dark"]
   --theme-color: #{$off-black}
   --theme-off-color: #222
   --inverse-color:  #{$white}
   --inverse-off-color: #c8c8c8
   --placeholder-color: #{$primary-color}
+    
+@media (prefers-color-scheme: dark)
+  [data-theme="auto"]
+    --theme-color: #{$off-black}
+    --theme-off-color: #222
+    --inverse-color:  #{$white}
+    --inverse-off-color: #c8c8c8
+    --placeholder-color: #{$primary-color}
