--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -30,6 +30,9 @@ input
       &::-ms-thumb
         background: var(--inverse-color)
 
+a.text-underline
+  transition: color $theme-fade-speed
+
 h1, h2, h3, h4, h5, h6
   font-weight: $weight-bold
 
